--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -587,9 +587,11 @@
       "dashboard": {
         "show": {
           "average_spend": "Avg. Spend",
+          "end_balance": "End Balance",
           "money_in": "Money In",
-          "money_saved": "Balance",
+          "money_saved": "Balance Diff",
           "spends": "Spends",
+          "start_balance": "Start Balance",
           "sub_header_category_summary": "Categories Summary",
           "sub_header_day_chart": "Daily Totals",
           "sub_header_recent_transactions": "Recent Transactions",
