Allow select all in transaction batch update

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -835,7 +835,8 @@
           "edit": "Edit",
           "mass_edit": "Bulk Edit",
           "mass_edit_cancel": "Cancel",
-          "mass_edit_deselect_all": "Deselect All",
+          "mass_edit_deselect_all": "None",
+          "mass_edit_select_all": "All",
           "mass_edit_selected": "%{count} Selected",
           "mass_edit_submit": "Submit",
           "mass_editing": "Bulk Editing",
