--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -889,7 +889,8 @@
           "edit": "Editar",
           "mass_edit": "Editar em Massa",
           "mass_edit_cancel": "Cancelar",
-          "mass_edit_deselect_all": "Deselecionar Tudo",
+          "mass_edit_deselect_all": "Nada",
+          "mass_edit_select_all": "Tudo",
           "mass_edit_selected": "%{count} Selecionada(s)",
           "mass_edit_submit": "Concluir",
           "mass_editing": "Editando em Massa",
