--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -817,27 +817,22 @@
         }
       },
       "settings": {
-        "form": {
-          "cancel_edit_button": "Cancelar",
-          "default_profile_label": "Perfil Padrão",
-          "disabled_password_label": "Senha",
-          "email_label": "Endereço de Email",
-          "first_name_label": "Nome",
-          "last_name_label": "Sobrenome",
-          "password_confirmation_label": "Confirme a Nova Senha",
-          "password_label": "Nova Senha",
-          "submit": "Salvar",
-          "update_password_link_label": "Trocar Senha"
-        },
         "show": {
+          "change_password_button": "Trocar a Senha",
           "default_profile": "Perfil Padrão",
           "edit_button": "Editar perfil",
+          "email": "Email",
           "empty_default_profile_label": "-- Perfil padrão não informado --",
           "empty_first_name_label": "-- Nome não informado --",
           "empty_last_name_label": "-- Sobrenome não informado --",
           "first_name": "Nome",
+          "header_account_settings": "Configurações de Conta",
+          "header_profile_settings": "Configurações de Perfil",
           "last_name": "Sobrenome",
-          "title": "Meu Perfil"
+          "password": "Senha",
+          "reset_form_button": "Desfazer",
+          "save_button": "Salvar Alterações",
+          "title": "Minha conta"
         }
       },
       "subcategories": {
