Add settings link to menu, tweak menu and navigation UI

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -666,6 +666,7 @@
           "profile": "My Profile",
           "profiles": "Profiles",
           "reconciliations": "Reconciliations",
+          "settings": "Preferences",
           "sign_in": "Sign In",
           "sign_out": "Sign Out",
           "sign_up": "Sign Up",
