--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -726,6 +726,7 @@
           "profile": "Meu Perfil",
           "profiles": "Perfis",
           "reconciliations": "Reconciliações",
+          "settings": "Configurações",
           "sign_in": "Fazer Login",
           "sign_out": "Sair da Conta",
           "sign_up": "Criar Conta",
