--- a/config/locales/active_record.pt-BR.yml
+++ b/config/locales/active_record.pt-BR.yml
@@ -30,8 +30,9 @@ pt-BR:
         balance_amount_cents: Saldo
       subcategory:
         name: Nome
-      users:
+      user:
         current_password: Senha atual
+        locale: Idioma
         password: Senha
         password_confirmation: Confirmação de Senha
       wallet:
