--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -13,6 +13,11 @@
           "balance_amount_cents": "Balance"
         },
         "transaction_automation": {
+          "schedule_types": {
+            "day": "Day",
+            "month": "Month",
+            "week": "Week"
+          },
           "transaction_category": "Category",
           "transaction_name": "Transaction Name"
         },
@@ -846,6 +851,12 @@
         "index": {
           "new": "New Automation",
           "title": "Transaction Automations"
+        },
+        "list": {
+          "disabled": "Disabled",
+          "next_run_desc": "Next run at %{date}",
+          "reenable_label": "Reenable",
+          "schedule_desc": "Scheduled every %{interval}"
         }
       },
       "transactions": {
